# Proyecto_Final

./: CMakeLists.txt  Juegos de Palabras.docx
En_el_orden_que_creas/: Maineoqc.c  eoqc.c  eoqc.h
Proyecto/: Main.c  libreria.c  libreria.h
Tan_rapido_como_puedas/: Maintrcp.c  trcp.c  trcp.h
Tantas_como_puedas/: tcp.c  tcp.h
